docs: CHANGELOG v0.2.1 entry + ARCHITECTURE.md launch method update
Documents the -VjtsConfigDir fix and the module-access flags in
both the changelog and the architecture doc.